# OllamaStudy

./: main.py  pyproject.toml  study_0107.ipynb  study_SQL agent_0112.ipynb  study_embedding_0109.ipynb  study_qa시스템 구현_0108 copy.ipynb  study_qa시스템 구현_0108.ipynb  study_뉴스 자연어 처리_0108.ipynb
